--- a/Kyrsach/Kyrsach.vcxproj.filters
+++ b/Kyrsach/Kyrsach.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Magic.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -66,6 +69,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Magic.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
