дабавил ray cast  и поведение врагу

--- a/Kyrsach/Kyrsach.vcxproj
+++ b/Kyrsach/Kyrsach.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="Magic.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="RayCastObject.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="TinyXML\tinystr.cpp" />
     <ClCompile Include="TinyXML\tinyxml.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Magic.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="RayCastObject.h" />
     <ClInclude Include="TinyXML\tinystr.h" />
     <ClInclude Include="TinyXML\tinyxml.h" />
   </ItemGroup>
