--- a/Kyrsach/Kyrsach.vcxproj.filters
+++ b/Kyrsach/Kyrsach.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="RayCastObject.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="InterFace.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -84,6 +87,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="RayCastObject.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="InterFace.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
